// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search routes GET /api/semantic-search should have a validation schema 1`] = `
Object {
  "children": Object {
    "limit": Object {
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "rules": Array [
        Object {
          "arg": 0,
          "name": "min",
        },
      ],
      "type": "number",
    },
    "minRelevantSentences": Object {
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "rules": Array [
        Object {
          "arg": 0,
          "name": "min",
        },
      ],
      "type": "number",
    },
    "searchId": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "skip": Object {
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "rules": Array [
        Object {
          "arg": 0,
          "name": "min",
        },
      ],
      "type": "number",
    },
    "threshold": Object {
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "rules": Array [
        Object {
          "arg": 0,
          "name": "min",
        },
      ],
      "type": "number",
    },
  },
  "type": "object",
}
`;

exports[`search routes GET /api/semantic-search/list should have a validation schema 1`] = `
Object {
  "children": Object {
    "minRelevantSentences": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "rules": Array [
        Object {
          "arg": 0,
          "name": "min",
        },
      ],
      "type": "number",
    },
    "searchId": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "threshold": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "rules": Array [
        Object {
          "arg": 0,
          "name": "min",
        },
      ],
      "type": "number",
    },
  },
  "type": "object",
}
`;

exports[`search routes POST /api/semantic-search should have a validation schema 1`] = `
Object {
  "children": Object {
    "documents": Object {
      "flags": Object {
        "sparse": false,
      },
      "items": Array [
        Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      ],
      "type": "array",
    },
    "query": Object {
      "type": "object",
    },
    "searchTerm": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;
